# UdemyCmakeMine

./: .gitignore
1_HELLOWORLD/: CMakeLists.txt  main.cpp
2_BASIC_PROJECT/: CMakeLists.txt  my_lib.h
2_INTERMEDIATE_PROJECT/: CMakeLists.txt
2_INTERMEDIATE_PROJECT/app/: CMakeLists.txt
3_INTERMEDIATE_PROJECT/app/: main.cpp
3_INTERMEDIATE_PROJECT/src/: CMakeLists.txt
4_VARIABLES/: CMakeLists.txt  Makefile
4_VARIABLES/app/: CMakeLists.txt
4_VARIABLES/src/: CMakeLists.txt
4_VARIABLES/src/my_lib/: CMakeLists.txt  my_lib.cpp
HELLOWORLD/: CMakeLists.txt
